src/gdalcubes/src/job/kubernetes/curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox2
  namespace: datacubepy
spec:
  containers:
    - name: busybox2
      image: radial/busyboxplus:curl
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      resources:
        limits:
          memory: 128Mi
          cpu: 500m
          ephemeral-storage: 500Mi
  restartPolicy: Always
