src/gdalcubes/src/job/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gdalcubepy-consumer
spec:
  selector:
    matchLabels:
      app: gdalcubepy-con
  replicas: 3 # tells deployment to run 1 pods matching the template
  template:
    metadata:
      labels:
        app: gdalcubepy-con
    spec:
      containers:
        - name: gdalcubepy-con
          image: mafehiza/gdalcubepy-consumer-3
          resources:
            limits:
              memory: 128Mi
              cpu: 300m
              ephemeral-storage: 300Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gdalcubepy-notification
spec:
  selector:
    matchLabels:
      app: gdalcubepy-not
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: gdalcubepy-not
    spec:
      containers:
        - name: gdalcubepy-not
          image: mafehiza/gdalcubepy-notification-3
          resources:
            limits:
              memory: 128Mi
              cpu: 100m
              ephemeral-storage: 128Mi
