src/gdalcubes/src/job/kubernetes/statefulset-kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  serviceName: "kafka"
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: debezium/kafka
          ports:
            - containerPort: 9092
              name: kafka
          resources:
            limits:
              memory: 500Mi
              cpu: 500m
              ephemeral-storage: 500Mi
