src/gdalcubes/src/job/kubernetes/statefulset-multi-broker-kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  serviceName: "kafka"
  replicas: 3
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: debezium/kafka
          ports:
            - containerPort: 9092
              name: kafka
            - containerPort: 9093
              name: kafka-external
          command: ["/bin/sh"]
          args: ["-c", "BROKER_ID=${POD_NAME##*-} KAFKA_ADVERTISED_LISTENERS=EXTERNAL://localhost:3000${POD_NAME##*-},INTERNAL://$(POD_NAME).kafka.datacubepy.svc:9092 /docker-entrypoint.sh start"]
