src/gdalcubes/src/job/kubernetes/statefulset-zookeeper.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
spec:
  selector:
    matchLabels:
      app: zookeeper
  serviceName: "zookeeper"
  replicas: 1
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: debezium/zookeeper
          ports:
            - containerPort: 2181
              name: client
          command: ["/bin/sh"]
          args: ["-c", "SERVER_ID=${POD_NAME##*-} /docker-entrypoint.sh start"]
