src/gdalcubes/src/job/kubernetes/bootstrap-service-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-bootstrap
spec:
  type: NodePort
  selector:
    app: kafka
  ports:
    - protocol: TCP
      port: 9092
