src/gdalcubes/src/job/kubernetes/headless-service-zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  ports:
    - port: 2181
      name: zookeeper
  clusterIP: None
  selector:
    app: zookeeper
