src/gdalcubes/src/job/kubernetes/kafka-0-service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-0-service
spec:
  selector:
    app: my-prometheus
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 9092
