src/gdalcubes/src/job/kubernetes/kafka-0-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-0
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: kafka-0
  ports:
    - protocol: TCP
      port: 9093
      nodePort: 30000
