src/gdalcubes/src/job/kubernetes/kafka-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-1
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: kafka-1
  ports:
    - protocol: TCP
      port: 9093
      nodePort: 30001
