src/gdalcubes/src/job/kubernetes/kafka-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-2
spec:
  type: NodePort
  selector:
    statefulset.kubernetes.io/pod-name: kafka-2
  ports:
    - protocol: TCP
      port: 9093
      nodePort: 30002
