src/gdalcubes/src/job/kubernetes/prometheus-service-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-prometheus
spec:
  type: NodePort
  selector:
    app: kafka
  ports:
    - protocol: TCP
      port: 8088
      nodePort: 32000
