src/gdalcubes/src/job/kubernetes/network-policy-allow-all-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "allow-within-namespace"
  namespace: datacubepy
specs:
  - endpointSelector:
      matchLabels: {}
    egress:
      - toEndpoints:
          - matchLabels:
              "k8s:io.kubernetes.pod.namespace": datacubepy
    ingress:
      - fromEndpoints:
          - matchLabels:
              "k8s:io.kubernetes.pod.namespace": datacubepy
